--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
   <h1>Список карт</h1>
   <ul>
-    <li><a href="map1.html">Map 1</a></li>
-    <li><a href="map2.html">Map 2</a></li>
+    <li><a href="map1.html">Сэим Кин “Синдром Паганини”</a></li>
+    <li><a href="map2.html">Ханна Арендт "Истоки тоталитаризма"</a></li>
     <li><a href="map3.html">Map 3</a></li>
   </ul>
 </body>
