--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <ul>
     <li><a href="map1.html">Сэим Кин “Синдром Паганини”</a></li>
     <li><a href="map2.html">Ханна Арендт "Истоки тоталитаризма"</a></li>
-    <li><a href="map3.html">Map 3</a></li>
+    <li><a href="map3.html">Мичио Каку "Физика будущего"</a></li>
   </ul>
 </body>
 </html>
