--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Мои майндмапы</title>
+  <title>Майндмапы</title>
 </head>
 <body>
-  <h1>Список карт</h1>
+  <h1>Список ментальных карт</h1>
   <ul>
     <li><a href="map1.html">Сэим Кин “Синдром Паганини”</a></li>
     <li><a href="map2.html">Ханна Арендт "Истоки тоталитаризма"</a></li>
