--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <li><a href="map1.html">Сэим Кин “Синдром Паганини”</a></li>
     <li><a href="map2.html">Ханна Арендт "Истоки тоталитаризма"</a></li>
     <li><a href="map3.html">Мичио Каку "Физика будущего"</a></li>
+    <li><a href="map4.html">Эми Брэнн "Заставь свой мозг работать"</a></li>
   </ul>
 </body>
 </html>
