--- a/index.html
+++ b/index.html
@@ -11,6 +11,22 @@
     <li><a href="map2.html">Ханна Арендт "Истоки тоталитаризма"</a></li>
     <li><a href="map3.html">Мичио Каку "Физика будущего"</a></li>
     <li><a href="map4.html">Эми Брэнн "Заставь свой мозг работать"</a></li>
+    <li><a href="map5.html">Карта 5</a></li>
+    <li><a href="map6.html">Карта 6</a></li>
+    <li><a href="map7.html">Карта 7</a></li>
+    <li><a href="map8.html">Карта 8</a></li>
+    <li><a href="map9.html">Карта 9</a></li>
+    <li><a href="map10.html">Карта 10</a></li>
+    <li><a href="map11.html">Карта 11</a></li>
+    <li><a href="map12.html">Карта 12</a></li>
+    <li><a href="map13.html">Карта 13</a></li>
+    <li><a href="map14.html">Карта 14</a></li>
+    <li><a href="map15.html">Карта 15</a></li>
+    <li><a href="map16.html">Карта 16</a></li>
+    <li><a href="map17.html">Карта 17</a></li>
+    <li><a href="map18.html">Карта 18</a></li>
+    <li><a href="map19.html">Карта 19</a></li>
+    <li><a href="map20.html">Карта 20</a></li>
   </ul>
 </body>
 </html>
