--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <body>
   <h1>Список ментальных карт</h1>
   <ul>
-    <li><a href="map1.html">Сэим Кин “Синдром Паганини”</a></li>
-    <li><a href="map2.html">Ханна Арендт "Истоки тоталитаризма"</a></li>
-    <li><a href="map3.html">Мичио Каку "Физика будущего"</a></li>
-    <li><a href="map4.html">Эми Брэнн "Заставь свой мозг работать"</a></li>
+    <li><a href="map1.html">Нора Галь «Слово живое и мёртвое»</a></li>
+    <li><a href="map2.html">Карта 2</a></li>
+    <li><a href="map3.html">Карта 3</a></li>
+    <li><a href="map4.html">Карта 4</a></li>
     <li><a href="map5.html">Карта 5</a></li>
     <li><a href="map6.html">Карта 6</a></li>
     <li><a href="map7.html">Карта 7</a></li>
