--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <h1>Список ментальных карт</h1>
   <ul>
     <li><a href="map1.html">Нора Галь «Слово живое и мёртвое»</a></li>
-    <li><a href="map2.html">Карта 2</a></li>
+    <li><a href="map2.html">Митио Каку «Физика будущего»</a></li>
     <li><a href="map3.html">Карта 3</a></li>
     <li><a href="map4.html">Карта 4</a></li>
     <li><a href="map5.html">Карта 5</a></li>
