--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <ul>
     <li><a href="map1.html">Нора Галь «Слово живое и мёртвое»</a></li>
     <li><a href="map2.html">Митио Каку «Физика будущего»</a></li>
-    <li><a href="map3.html">Карта 3</a></li>
+    <li><a href="map3.html">Сэм Кин «Синдром Паганини»</a></li>
     <li><a href="map4.html">Карта 4</a></li>
     <li><a href="map5.html">Карта 5</a></li>
     <li><a href="map6.html">Карта 6</a></li>
