--- a/index.html
+++ b/index.html
@@ -7,26 +7,27 @@
 <body>
   <h1>Список ментальных карт</h1>
   <ul>
-    <li><a href="map1.html">Нора Галь «Слово живое и мёртвое»</a></li>
-    <li><a href="map2.html">Митио Каку «Физика будущего»</a></li>
-    <li><a href="map3.html">Сэм Кин «Синдром Паганини»</a></li>
-    <li><a href="map4.html">Карта 4</a></li>
-    <li><a href="map5.html">Карта 5</a></li>
-    <li><a href="map6.html">Карта 6</a></li>
-    <li><a href="map7.html">Карта 7</a></li>
-    <li><a href="map8.html">Карта 8</a></li>
-    <li><a href="map9.html">Карта 9</a></li>
-    <li><a href="map10.html">Карта 10</a></li>
-    <li><a href="map11.html">Карта 11</a></li>
-    <li><a href="map12.html">Карта 12</a></li>
-    <li><a href="map13.html">Карта 13</a></li>
-    <li><a href="map14.html">Карта 14</a></li>
-    <li><a href="map15.html">Карта 15</a></li>
-    <li><a href="map16.html">Карта 16</a></li>
-    <li><a href="map17.html">Карта 17</a></li>
-    <li><a href="map18.html">Карта 18</a></li>
-    <li><a href="map19.html">Карта 19</a></li>
-    <li><a href="map20.html">Карта 20</a></li>
+    <li><a href="map1.html" target="_blank">Нора Галь «Слово живое и мёртвое»</a></li>
+    <li><a href="map2.html" target="_blank">Митио Каку «Физика будущего»</a></li>
+    <li><a href="map3.html" target="_blank">Сэм Кин «Синдром Паганини»</a></li>
+    <li><a href="map4.html" target="_blank">Карта 4</a></li>
+    <li><a href="map5.html" target="_blank">Карта 5</a></li>
+    <li><a href="map6.html" target="_blank">Карта 6</a></li>
+    <li><a href="map7.html" target="_blank">Карта 7</a></li>
+    <li><a href="map8.html" target="_blank">Карта 8</a></li>
+    <li><a href="map9.html" target="_blank">Карта 9</a></li>
+    <li><a href="map10.html" target="_blank">Карта 10</a></li>
+    <li><a href="map11.html" target="_blank">Карта 11</a></li>
+    <li><a href="map12.html" target="_blank">Карта 12</a></li>
+    <li><a href="map13.html" target="_blank">Карта 13</a></li>
+    <li><a href="map14.html" target="_blank">Карта 14</a></li>
+    <li><a href="map15.html" target="_blank">Карта 15</a></li>
+    <li><a href="map16.html" target="_blank">Карта 16</a></li>
+    <li><a href="map17.html" target="_blank">Карта 17</a></li>
+    <li><a href="map18.html" target="_blank">Карта 18</a></li>
+    <li><a href="map19.html" target="_blank">Карта 19</a></li>
+    <li><a href="map20.html" target="_blank">Карта 20</a></li>
+
   </ul>
 </body>
 </html>
