--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <li><a href="map2.html" target="_blank">Митио Каку «Физика будущего»</a></li>
     <li><a href="map3.html" target="_blank">Сэм Кин «Синдром Паганини»</a></li>
     <li><a href="map4.html" target="_blank">Ханна Арендт «Истоки тоталитаризма»</a></li>
-    <li><a href="map5.html" target="_blank">Карта 5</a></li>
+    <li><a href="map5.html" target="_blank">Андрей Панов «Симулятор безумия»</a></li>
     <li><a href="map6.html" target="_blank">Карта 6</a></li>
     <li><a href="map7.html" target="_blank">Карта 7</a></li>
     <li><a href="map8.html" target="_blank">Карта 8</a></li>
