--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <li><a href="map4.html" target="_blank">Ханна Арендт «Истоки тоталитаризма»</a></li>
     <li><a href="map5.html" target="_blank">Андрей Панов «Симулятор безумия»</a></li>
     <li><a href="map6.html" target="_blank">Клаус Шваб «Четвертая промышленная революция»</a></li>
-    <li><a href="map7.html" target="_blank">Карта 7</a></li>
+    <li><a href="map7.html" target="_blank">Дэвид Брен «Заставь свой мозг работать»</a></li>
     <li><a href="map8.html" target="_blank">Карта 8</a></li>
     <li><a href="map9.html" target="_blank">Карта 9</a></li>
     <li><a href="map10.html" target="_blank">Карта 10</a></li>
