--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <li><a href="map6.html" target="_blank">Клаус Шваб «Четвертая промышленная революция»</a></li>
     <li><a href="map7.html" target="_blank">Дэвид Брен «Заставь свой мозг работать»</a></li>
     <li><a href="map8.html" target="_blank">Джулия Галеф «Мышление разведчика. Почему одни люди видят все как есть и принимают правильные решения, а другие заблуждаются»</a></li>
-    <li><a href="map9.html" target="_blank">Карта 9</a></li>
+    <li><a href="map9.html" target="_blank">Елена Легран «Разгадай код художника: новый взгляд на известные шедевры»</a></li>
     <li><a href="map10.html" target="_blank">Карта 10</a></li>
     <li><a href="map11.html" target="_blank">Карта 11</a></li>
     <li><a href="map12.html" target="_blank">Карта 12</a></li>
