--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <li><a href="map8.html" target="_blank">Джулия Галеф «Мышление разведчика. Почему одни люди видят все как есть и принимают правильные решения, а другие заблуждаются»</a></li>
     <li><a href="map9.html" target="_blank">Елена Легран «Разгадай код художника: новый взгляд на известные шедевры»</a></li>
     <li><a href="map10.html" target="_blank">Пиперски «Конструирование языков: от эсперанто до дотракийского»</a></li>
-    <li><a href="map11.html" target="_blank">Карта 11</a></li>
+    <li><a href="map11.html" target="_blank">Барбара Оакли «Думай как математик: Как решать любые задачи быстрее и эффективнее»</a></li>
     <li><a href="map12.html" target="_blank">Карта 12</a></li>
     <li><a href="map13.html" target="_blank">Карта 13</a></li>
     <li><a href="map14.html" target="_blank">Карта 14</a></li>
