--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <li><a href="map11.html" target="_blank">Барбара Оакли «Думай как математик: Как решать любые задачи быстрее и эффективнее»</a></li>
     <li><a href="map12.html" target="_blank">Торчинов «Введение в буддизм. Опыт запредельного»</a></li>
     <li><a href="map13.html" target="_blank">Колин Кэмпбелл «Китайское исследование»</a></li>
-    <li><a href="map14.html" target="_blank">Карта 14</a></li>
+    <li><a href="map14.html" target="_blank">Фарнсворт «Метод Сократа. Искусство задавать вопросы о мире и о себе»</a></li>
     <li><a href="map15.html" target="_blank">Карта 15</a></li>
     <li><a href="map16.html" target="_blank">Карта 16</a></li>
     <li><a href="map17.html" target="_blank">Карта 17</a></li>
