--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Майндмапы</title>
 </head>
 <body>
-  <h1>Список ментальных карт</h1>
+  <h1>Список ментальных карт https://markmap.js.org/</h1>
   <ul>
     <li><a href="map1.html" target="_blank">Нора Галь «Слово живое и мёртвое»</a></li>
     <li><a href="map2.html" target="_blank">Митио Каку «Физика будущего»</a></li>
