--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <title>Майндмапы</title>
 </head>
 <body>
-  <h1>Список ментальных карт</h1>
-  <a href="https://markmap.js.org/">MarkMap</a>
+  <h1>Ментальные карты <a href="https://markmap.js.org/">MarkMap</a></h1>
   <br/>
   <ul>
     <li><a href="map1.html" target="_blank">Нора Галь «Слово живое и мёртвое»</a></li>
