--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </style>
 </head>
 <body>
-  <h1>Ментальные карты <a href="https://markmap.js.org/">MarkMap</a></h1>
+  <h1>nbsp;Ментальные карты <a href="https://markmap.js.org/">MarkMap</a></h1>
   <ul>
     <li><a href="map1.html" target="_blank">Нора Галь «Слово живое и мёртвое»</a></li>
     <li><a href="map2.html" target="_blank">Митио Каку «Физика будущего»</a></li>
